# api/v1/inference_server_worker.swagger.json
@@ -313,6 +313,10 @@
           "type": "integer",
           "format": "int32",
           "title": "MaxCompletionTokens specifies the maximum limit on the number of tokens that can be generated during a completion.`"
+        },
+        "encodedChatTemplateKwargs": {
+          "type": "string",
+          "description": "encoded_chat_template_kwargs is encoded value of \"chat_template_kwargs\". This is a special parameter\nthat only vLLM uses.\n\nThe field is converted to the \"chat_template_kwargs\" field when the request is being\nsent to vLLM.\n\nhttps://docs.vllm.ai/en/latest/serving/openai_compatible_server.html#id7"
         }
       }
     },
