# ts/api/v1/inference_server.pb.ts
@@ -94,6 +94,7 @@ export type CreateChatCompletionRequest = {
   tool_choice_object?: CreateChatCompletionRequestToolChoice
   user?: string
   max_completion_tokens?: number
+  encoded_chat_template_kwargs?: string
 }
 
 export type ToolCallFunction = {
